--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <div class="header__logo element-animation"><img src="/img/Group.svg" alt="cover"></div>
                     <div class="header__menu">
                         <ul class="header__list">
-                            <li class="header__item element-animation"><a href="./Tennis.html">Главная</a></li>
-                            <li class="header__item element-animation"><a href="./Tennis-news.html">О клубе</a></li>
+                            <li class="header__item element-animation"><a href="./index.html">Главная</a></li>
+                            <li class="header__item element-animation"><a href="./index-news.html">О клубе</a></li>
                             <li class="header__item element-animation"><a href="#">Турниры</a></li>
                             <li class="header__item element-animation"><a href="#">Услуги</a></li>
                             <li class="header__item element-animation"><a href="#">Детский теннис</a></li>
@@ -301,8 +301,8 @@
                     <div class="footer__defense element-animation">2022 © Все права защищены.</div>
                     <div class="footer__menu">
                         <ul class="footer__list">
-                            <li class="footer__item element-animation"><a href="./Tennis.html">Главная</a></li>
-                            <li class="footer__item element-animation"><a href="./Tennis-news.html">О клубе</a></li>
+                            <li class="footer__item element-animation"><a href="./index.html">Главная</a></li>
+                            <li class="footer__item element-animation"><a href="./index-news.html">О клубе</a></li>
                             <li class="footer__item element-animation"><a href="#">Турниры</a></li>
                             <li class="footer__item element-animation"><a href="#">Услуги</a></li>
                             <li class="footer__item element-animation"><a href="#">Детский теннис</a></li>
