--- a/index-news.html
+++ b/index-news.html
@@ -16,11 +16,12 @@
         <header class="header-news">
             <div class="header-news__countainer _countainer">
                 <section class="header__body">
-                    <div class="header__logo"><a href="./Tenis.html"><img src="./img/Group.svg" alt="cover"></a></div>
+                    <div class="header__logo"><a href="./Tenis.html"><img src="./scss/img/Group.svg" alt="cover"></a>
+                    </div>
                     <div class="header__menu">
                         <ul class="header__list">
-                            <li class="header__item"><a href="./Tennis.html">Главная</a></li>
-                            <li class="header__item"><a href="./Tenis.html">О клубе</a></li>
+                            <li class="header__item"><a href="./scss/Tennis.html">Главная</a></li>
+                            <li class="header__item"><a href="./scss/Tenis.html">О клубе</a></li>
                             <li class="header__item"><a href="#">Турниры</a></li>
                             <li class="header__item"><a href="#">Услуги</a></li>
                             <li class="header__item"><a href="#">Детский теннис</a></li>
@@ -54,8 +55,8 @@
                         </div>
                     </div>
                     <div class="header__icon">
-                        <img src="./img/Vector-logo-y.svg" alt="cover">
-                        <img src="./img/Vector-logo-w.svg" alt="cover">
+                        <img src="./scss/img/Vector-logo-y.svg" alt="cover">
+                        <img src="./scss/img/Vector-logo-w.svg" alt="cover">
                     </div>
                 </section>
                 <section class="header-news__body">
