--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="header__countainer _countainer">
                 <div class="header__body">
-                    <div class="header__logo element-animation"><img src="/img/Group.svg" alt="cover"></div>
+                    <div class="header__logo element-animation"><img src="./scss/img/Group.svg" alt="cover"></div>
                     <div class="header__menu">
                         <ul class="header__list">
                             <li class="header__item element-animation"><a href="./index.html">Главная</a></li>
@@ -54,8 +54,8 @@
                         </div>
                     </div>
                     <div class="header__icon element-animation">
-                        <img src="/img/Vector-logo-y.svg" alt="cover">
-                        <img src="/img/Vector-logo-w.svg" alt="cover">
+                        <img src="./scss/img/Vector-logo-y.svg" alt="cover">
+                        <img src="./scss/img/Vector-logo-w.svg" alt="cover">
                     </div>
                 </div>
             </div>
@@ -78,7 +78,8 @@
                                 <div class="item__title">Услуги</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Аренда корта</div>
-                                    <div class="item__icon"><img src="./img/Vector-icon-more.svg" alt="cover"></div>
+                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -87,7 +88,8 @@
                                 <div class="item__title">Услуги</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Детский теннис</div>
-                                    <div class="item__icon"><img src="./img/Vector-icon-more.svg" alt="cover"></div>
+                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -96,7 +98,8 @@
                                 <div class="item__title">Услуги</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Сборы команд</div>
-                                    <div class="item__icon"><img src="./img/Vector-icon-more.svg" alt="cover"></div>
+                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +108,8 @@
                                 <div class="item__title">Турниры</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Расписание</div>
-                                    <div class="item__icon"><img src="./img/Vector-icon-more.svg" alt="cover"></div>
+                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -117,15 +121,15 @@
             <div class="main-parquet__countainer _countainer">
                 <div class="main-parquet__body">
                     <div class="main-parquet__column-parquet element-animation">
-                        <img src="./img/Rectangle 39-img1.svg" alt="cover">
+                        <img src="./scss/img/Rectangle 39-img1.svg" alt="cover">
                         <div class="main-parquet__text">5 летних <br> грунтовых кортов</div>
                     </div>
                     <div class="main-parquet__column-parquet element-animation">
-                        <img src="./img/Rectangle 41-img2.svg" alt="cover">
+                        <img src="./scss/img/Rectangle 41-img2.svg" alt="cover">
                         <div class="main-parquet__text">Зал с покрытием <br> “Искусственная трава”</div>
                     </div>
                     <div class="main-parquet__column-parquet element-animation">
-                        <img src="./img/Rectangle 43-img3.svg" alt="cover">
+                        <img src="./scss/img/Rectangle 43-img3.svg" alt="cover">
                         <div class="main-parquet__text">Зал с покрытием <br> “Хард”</div>
                     </div>
                 </div>
@@ -177,16 +181,17 @@
                 <div class="main-couches__body element-animation">
                     <h2 class="main-couches__title">Тренерский состав</h2>
                     <div class="main-couches__button-column">
-                        <button class="main-couches__button"><img src="./img/Vector-button.svg" alt="cover"></button>
-                        <button class="main-couches__button-right"><img src="./img/Vector-button.svg"
+                        <button class="main-couches__button"><img src="./scss/img/Vector-button.svg"
+                                alt="cover"></button>
+                        <button class="main-couches__button-right"><img src="./scss/img/Vector-button.svg"
                                 alt="cover"></button>
                     </div>
                 </div>
                 <div class="main-couches__body-column">
                     <div class="main-couches__column">
                         <div class="main-couches__item">
-                            <div class="main-couches__img element-animation"><img src="./img/Rectangle 39-couch1.svg"
-                                    alt="cover"></div>
+                            <div class="main-couches__img element-animation"><img
+                                    src="./scss/img/Rectangle 39-couch1.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Pulvinar <br> aliquam</div>
                             <div class="main-couches__text element-animation">Arcu elit massa amet turpis vel consequat
                                 pellentesque sit.
@@ -195,8 +200,8 @@
                     </div>
                     <div class="main-couches__column">
                         <div class="main-couches__item">
-                            <div class="main-couches__img element-animation"><img src="./img/Rectangle 52-couch2.svg"
-                                    alt="cover"></div>
+                            <div class="main-couches__img element-animation"><img
+                                    src="./scss/img/Rectangle 52-couch2.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Pretium <br> odio</div>
                             <div class="main-couches__text element-animation">Bibendum aliquam volutpat nisl a duis in
                                 nisi. In sed
@@ -254,25 +259,29 @@
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Зимний сезон 2021-2022</div>
-                                <div class="main-services__img"><img src="./img/Vector-vector.svg" alt="cover"></div>
+                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                </div>
                             </div>
                         </div>
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Абонементы</div>
-                                <div class="main-services__img"><img src="./img/Vector-vector.svg" alt="cover"></div>
+                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                </div>
                             </div>
                         </div>
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Скидки</div>
-                                <div class="main-services__img"><img src="./img/Vector-vector.svg" alt="cover"></div>
+                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                </div>
                             </div>
                         </div>
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Дополнительные услуги</div>
-                                <div class="main-services__img"><img src="./img/Vector-vector.svg" alt="cover"></div>
+                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -280,14 +289,15 @@
                         <div class="main-services__block-coffee">
                             <h2 class="main-services__title element-animation">Услуги</h2>
                             <div class="main-services__button-column element-animation">
-                                <button class="main-services__button"><img src="./img/Vector-button.svg"
+                                <button class="main-services__button"><img src="./scss/img/Vector-button.svg"
                                         alt="cover"></button>
-                                <button class="main-services__button-right"><img src="./img/Vector-button.svg"
+                                <button class="main-services__button-right"><img src="./scss/img/Vector-button.svg"
                                         alt="cover"></button>
                             </div>
                         </div>
                         <div class="main-services__column-coffee element-animation">
-                            <div class="main-services__img-coffee"><img src="./img/Rectangle 39-coffee.svg" alt="cover">
+                            <div class="main-services__img-coffee"><img src="./scss/img/Rectangle 39-coffee.svg"
+                                    alt="cover">
                             </div>
                             <div class="main-services__text-coffee">Уютное кафе</div>
                         </div>
@@ -312,9 +322,9 @@
                         </ul>
                     </div>
                     <div class="footer__icon element-animation">
-                        <img src="./img/Vector-yotube.svg" alt="cover">
-                        <img src="./img/Vector-wk.svg" alt="cover">
-                        <img src="./img/Vector-t.svg" alt="cover">
+                        <img src="./scss/img/Vector-yotube.svg" alt="cover">
+                        <img src="./scss/img/Vector-wk.svg" alt="cover">
+                        <img src="./scss/img/Vector-t.svg" alt="cover">
                     </div>
                 </div>
             </div>
