--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </h1>
                         <div class="main__more element-animation">
                             <button class="main__button">
-                                <div class="main__play"><a href="#"><img src="./img/Polygon 1.svg" alt="cover"></a>
+                                <div class="main__play"><a href="#"><img src="./scss/img/Polygon 1.svg" alt="cover"></a>
                                 </div>
                             </button>
                             <div class="main__more-text">Посмотрите видео <br> о нашем клубе</div>
@@ -210,8 +210,8 @@
                     </div>
                     <div class="main-couches__column">
                         <div class="main-couches__item">
-                            <div class="main-couches__img element-animation"><img src="./img/Rectangle 54-couch3.svg"
-                                    alt="cover"></div>
+                            <div class="main-couches__img element-animation"><img
+                                    src="./scss/img/Rectangle 54-couch3.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Aliquet <br> consectetur</div>
                             <div class="main-couches__text element-animation">Id sapien sed nibh fermentum massa posuere
                                 ipsum. Diam in.
@@ -220,8 +220,8 @@
                     </div>
                     <div class="main-couches__column">
                         <div class="main-couches__item">
-                            <div class="main-couches__img element-animation"><img src="./img/Rectangle 56-couch4.svg"
-                                    alt="cover"></div>
+                            <div class="main-couches__img element-animation"><img
+                                    src="./scss/img/Rectangle 56-couch4.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Blandit <br> augue</div>
                             <div class="main-couches__text element-animation">Scelerisque accumsan pretium justo, vitae
                                 elit. Dolor semper
@@ -230,8 +230,8 @@
                     </div>
                     <div class="main-couches__column">
                         <div class="main-couches__item">
-                            <div class="main-couches__img element-animation"><img src="./img/Rectangle 58-couch5.svg"
-                                    alt="cover"></div>
+                            <div class="main-couches__img element-animation"><img
+                                    src="./scss/img/Rectangle 58-couch5.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Lorem <br> lacus</div>
                             <div class="main-couches__text element-animation">Adipiscing amet, viverra dignissim
                                 egestas. Sed nibh egestas
@@ -240,8 +240,8 @@
                     </div>
                     <div class="main-couches__column">
                         <div class="main-couches__item">
-                            <div class="main-couches__img element-animation"><img src="./img/Rectangle 60-couch6.svg"
-                                    alt="cover"></div>
+                            <div class="main-couches__img element-animation"><img
+                                    src="./scss/img/Rectangle 60-couch6.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Sed <br> erat</div>
                             <div class="main-couches__text element-animation">Quis ullamcorper pretium lacus risus
                                 tellus dolor etiam.
