--- a/index-news.html
+++ b/index-news.html
@@ -141,9 +141,9 @@
                         </ul>
                     </div>
                     <div class="footer__icon">
-                        <img src="./img/Vector-yotube.svg" alt="cover">
-                        <img src="./img/Vector-wk.svg" alt="cover">
-                        <img src="./img/Vector-t.svg" alt="cover">
+                        <img src="./scss/img/Vector-yotube.svg" alt="cover">
+                        <img src="./scss/img/Vector-wk.svg" alt="cover">
+                        <img src="./scss/img/Vector-t.svg" alt="cover">
                     </div>
                 </div>
             </div>
