--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="header__countainer _countainer">
                 <div class="header__body">
-                    <div class="header__logo element-animation"><img src="./scss/img/Group.svg" alt="cover"></div>
+                    <div class="header__logo element-animation"><img src="./css/img/Group.svg" alt="cover"></div>
                     <div class="header__menu">
                         <ul class="header__list">
                             <li class="header__item element-animation"><a href="./index.html">Главная</a></li>
@@ -54,8 +54,8 @@
                         </div>
                     </div>
                     <div class="header__icon element-animation">
-                        <img src="./scss/img/Vector-logo-y.svg" alt="cover">
-                        <img src="./scss/img/Vector-logo-w.svg" alt="cover">
+                        <img src="./css/img/Vector-logo-y.svg" alt="cover">
+                        <img src="./css/img/Vector-logo-w.svg" alt="cover">
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                         </h1>
                         <div class="main__more element-animation">
                             <button class="main__button">
-                                <div class="main__play"><a href="#"><img src="./scss/img/Polygon 1.svg" alt="cover"></a>
+                                <div class="main__play"><a href="#"><img src="./css/img/Polygon 1.svg" alt="cover"></a>
                                 </div>
                             </button>
                             <div class="main__more-text">Посмотрите видео <br> о нашем клубе</div>
@@ -78,7 +78,7 @@
                                 <div class="item__title">Услуги</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Аренда корта</div>
-                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    <div class="item__icon"><img src="./css/img/Vector-icon-more.svg" alt="cover">
                                     </div>
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                                 <div class="item__title">Услуги</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Детский теннис</div>
-                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    <div class="item__icon"><img src="./css/img/Vector-icon-more.svg" alt="cover">
                                     </div>
                                 </div>
                             </div>
@@ -98,7 +98,7 @@
                                 <div class="item__title">Услуги</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Сборы команд</div>
-                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    <div class="item__icon"><img src="./css/img/Vector-icon-more.svg" alt="cover">
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                 <div class="item__title">Турниры</div>
                                 <div class="item__block-text">
                                     <div class="item__text">Расписание</div>
-                                    <div class="item__icon"><img src="./scss/img/Vector-icon-more.svg" alt="cover">
+                                    <div class="item__icon"><img src="./css/img/Vector-icon-more.svg" alt="cover">
                                     </div>
                                 </div>
                             </div>
@@ -121,15 +121,15 @@
             <div class="main-parquet__countainer _countainer">
                 <div class="main-parquet__body">
                     <div class="main-parquet__column-parquet element-animation">
-                        <img src="./scss/img/Rectangle 39-img1.svg" alt="cover">
+                        <img src="./css/img/Rectangle 39-img1.svg" alt="cover">
                         <div class="main-parquet__text">5 летних <br> грунтовых кортов</div>
                     </div>
                     <div class="main-parquet__column-parquet element-animation">
-                        <img src="./scss/img/Rectangle 41-img2.svg" alt="cover">
+                        <img src="./css/img/Rectangle 41-img2.svg" alt="cover">
                         <div class="main-parquet__text">Зал с покрытием <br> “Искусственная трава”</div>
                     </div>
                     <div class="main-parquet__column-parquet element-animation">
-                        <img src="./scss/img/Rectangle 43-img3.svg" alt="cover">
+                        <img src="./css/img/Rectangle 43-img3.svg" alt="cover">
                         <div class="main-parquet__text">Зал с покрытием <br> “Хард”</div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
         <div class="main-sport-club">
             <div class="main-sport-club__countainer _countainer">
                 <div class="main-sport-club__body">
-                    <div class="main-sport-club__img element-animation"><img src="./img/Rectangle 45-sport-club.svg"
+                    <div class="main-sport-club__img element-animation"><img src="./css/img/Rectangle 45-sport-club.svg"
                             alt="cover"></div>
                     <div class="main-sport-club__body-column element-animation">
                         <div class="main-sport-club__column">
@@ -181,9 +181,9 @@
                 <div class="main-couches__body element-animation">
                     <h2 class="main-couches__title">Тренерский состав</h2>
                     <div class="main-couches__button-column">
-                        <button class="main-couches__button"><img src="./scss/img/Vector-button.svg"
+                        <button class="main-couches__button"><img src="./css/img/Vector-button.svg"
                                 alt="cover"></button>
-                        <button class="main-couches__button-right"><img src="./scss/img/Vector-button.svg"
+                        <button class="main-couches__button-right"><img src="./css/img/Vector-button.svg"
                                 alt="cover"></button>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     <div class="main-couches__column">
                         <div class="main-couches__item">
                             <div class="main-couches__img element-animation"><img
-                                    src="./scss/img/Rectangle 39-couch1.svg" alt="cover"></div>
+                                    src="./css/img/Rectangle 39-couch1.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Pulvinar <br> aliquam</div>
                             <div class="main-couches__text element-animation">Arcu elit massa amet turpis vel consequat
                                 pellentesque sit.
@@ -201,7 +201,7 @@
                     <div class="main-couches__column">
                         <div class="main-couches__item">
                             <div class="main-couches__img element-animation"><img
-                                    src="./scss/img/Rectangle 52-couch2.svg" alt="cover"></div>
+                                    src="./css/img/Rectangle 52-couch2.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Pretium <br> odio</div>
                             <div class="main-couches__text element-animation">Bibendum aliquam volutpat nisl a duis in
                                 nisi. In sed
@@ -211,7 +211,7 @@
                     <div class="main-couches__column">
                         <div class="main-couches__item">
                             <div class="main-couches__img element-animation"><img
-                                    src="./scss/img/Rectangle 54-couch3.svg" alt="cover"></div>
+                                    src="./css/img/Rectangle 54-couch3.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Aliquet <br> consectetur</div>
                             <div class="main-couches__text element-animation">Id sapien sed nibh fermentum massa posuere
                                 ipsum. Diam in.
@@ -221,7 +221,7 @@
                     <div class="main-couches__column">
                         <div class="main-couches__item">
                             <div class="main-couches__img element-animation"><img
-                                    src="./scss/img/Rectangle 56-couch4.svg" alt="cover"></div>
+                                    src="./css/img/Rectangle 56-couch4.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Blandit <br> augue</div>
                             <div class="main-couches__text element-animation">Scelerisque accumsan pretium justo, vitae
                                 elit. Dolor semper
@@ -231,7 +231,7 @@
                     <div class="main-couches__column">
                         <div class="main-couches__item">
                             <div class="main-couches__img element-animation"><img
-                                    src="./scss/img/Rectangle 58-couch5.svg" alt="cover"></div>
+                                    src="./css/img/Rectangle 58-couch5.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Lorem <br> lacus</div>
                             <div class="main-couches__text element-animation">Adipiscing amet, viverra dignissim
                                 egestas. Sed nibh egestas
@@ -241,7 +241,7 @@
                     <div class="main-couches__column">
                         <div class="main-couches__item">
                             <div class="main-couches__img element-animation"><img
-                                    src="./scss/img/Rectangle 60-couch6.svg" alt="cover"></div>
+                                    src="./css/img/Rectangle 60-couch6.svg" alt="cover"></div>
                             <div class="main-couches__title-name element-animation">Sed <br> erat</div>
                             <div class="main-couches__text element-animation">Quis ullamcorper pretium lacus risus
                                 tellus dolor etiam.
@@ -259,28 +259,28 @@
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Зимний сезон 2021-2022</div>
-                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                <div class="main-services__img"><img src="./css/img/Vector-vector.svg" alt="cover">
                                 </div>
                             </div>
                         </div>
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Абонементы</div>
-                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                <div class="main-services__img"><img src="./css/img/Vector-vector.svg" alt="cover">
                                 </div>
                             </div>
                         </div>
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Скидки</div>
-                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                <div class="main-services__img"><img src="./css/img/Vector-vector.svg" alt="cover">
                                 </div>
                             </div>
                         </div>
                         <div class="main-services__column element-animation">
                             <div class="main-services__item">
                                 <div class="main-services__text">Дополнительные услуги</div>
-                                <div class="main-services__img"><img src="./scss/img/Vector-vector.svg" alt="cover">
+                                <div class="main-services__img"><img src="./css/img/Vector-vector.svg" alt="cover">
                                 </div>
                             </div>
                         </div>
@@ -289,14 +289,14 @@
                         <div class="main-services__block-coffee">
                             <h2 class="main-services__title element-animation">Услуги</h2>
                             <div class="main-services__button-column element-animation">
-                                <button class="main-services__button"><img src="./scss/img/Vector-button.svg"
+                                <button class="main-services__button"><img src="./css/img/Vector-button.svg"
                                         alt="cover"></button>
-                                <button class="main-services__button-right"><img src="./scss/img/Vector-button.svg"
+                                <button class="main-services__button-right"><img src="./css/img/Vector-button.svg"
                                         alt="cover"></button>
                             </div>
                         </div>
                         <div class="main-services__column-coffee element-animation">
-                            <div class="main-services__img-coffee"><img src="./scss/img/Rectangle 39-coffee.svg"
+                            <div class="main-services__img-coffee"><img src="./css/img/Rectangle 39-coffee.svg"
                                     alt="cover">
                             </div>
                             <div class="main-services__text-coffee">Уютное кафе</div>
@@ -322,9 +322,9 @@
                         </ul>
                     </div>
                     <div class="footer__icon element-animation">
-                        <img src="./scss/img/Vector-yotube.svg" alt="cover">
-                        <img src="./scss/img/Vector-wk.svg" alt="cover">
-                        <img src="./scss/img/Vector-t.svg" alt="cover">
+                        <img src="./css/img/Vector-yotube.svg" alt="cover">
+                        <img src="./css/img/Vector-wk.svg" alt="cover">
+                        <img src="./css/img/Vector-t.svg" alt="cover">
                     </div>
                 </div>
             </div>
