--- a/index-news.html
+++ b/index-news.html
@@ -20,8 +20,8 @@
                     </div>
                     <div class="header__menu">
                         <ul class="header__list">
-                            <li class="header__item"><a href="./css/Tennis.html">Главная</a></li>
-                            <li class="header__item"><a href="./css/Tenis.html">О клубе</a></li>
+                            <li class="header__item"><a href="./index.html">Главная</a></li>
+                            <li class="header__item"><a href="./index-news.html">О клубе</a></li>
                             <li class="header__item"><a href="#">Турниры</a></li>
                             <li class="header__item"><a href="#">Услуги</a></li>
                             <li class="header__item"><a href="#">Детский теннис</a></li>
