--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 
 <head>
-    <title>Document</title>
+    <title>Tennis</title>
+    <link rel="icon" href="https://i.pinimg.com/originals/16/01/4d/16014d4ba2c95438a77e1ad51fadda1e.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
